fixed bug: background disappearing behind mobile keyboard

--- a/src/components/forms/forms.css
+++ b/src/components/forms/forms.css
@@ -6,7 +6,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   background: #4D5A6F;
   color: #FFFFFF;
   letter-spacing: .2rem;
